Fix content alignments

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
 .nav-menu {
   display: none;
   flex-direction: column;
-  width: 100%;
+ 
 }
 
 .nav-menu > li {
@@ -91,16 +91,17 @@ header {
   font-weight: 700;
   font-family: Poppins-semibold, sans-serif;
   font-size: 1.125em;
-
-  /* Primary/B400 */
   color: #6070ff;
-  align-items: center;
+  align-items:first baseline;
+  flex-direction: row;
   justify-content: space-between;
   background-position: bottom 0;
   padding-left: 7%;
   padding-right: 7%;
-  padding-top: 13%;
-  background-color: #fff;
+  padding-top: 2%;
+  background-color:white;
+  height: 100%;
+  flex-grow: 1;
 }
 
 .intro {
@@ -246,7 +247,7 @@ div {
   text-align: center;
   font-family: Poppins-Light, sans-serif;
   margin-top: 5%;
-  margin-bottom: 13%;
+  margin-bottom: 10%;
   padding-right: 6%;
   padding-left: 6%;
 }
@@ -504,20 +505,22 @@ textarea {
   position: fixed;
   top: 1rem;
   right: 1rem;
+  
 }
 
 #Logo {
-  width: 100%;
-  height: 20px;
+  width: 30%;  
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   color: #5564eb;
-  white-space: nowrap;
-  display: block;
-  float: left;
-}
+  margin:0px;
+  display:block;
+  background-color: white;
+  white-space: nowrap
+  
+  }
 
 @media (min-width: 768px) {
   #switch {
@@ -528,6 +531,7 @@ textarea {
     display: flex;
     flex-direction: row;
     width: 100%;
+    
   }
 
   .nav-menu {
@@ -582,20 +586,20 @@ textarea {
     border-bottom-left-radius: 10% 10%;
     background-color: #fff;
     padding-left: 13%;
-    padding-right: 14%;
+    padding-right: 10%;
   }
 
   .intro > h1 {
-    font-size: 45px;
+    font-size: 48px;
     font-family: Poppins-extrabold, sans-serif;
     margin-top: 0;
     margin-bottom: 0.32em;
-    padding-right: 40%;
+    padding-right: 1%;
   }
 
   .intro > p {
     text-decoration: solid;
-    font-size: 16px;
+    font-size: 17px;
   }
 
   .imgalin {
@@ -731,20 +735,19 @@ textarea {
     background-image: url("./images/contact-form-background-shapes.svg");
     background-repeat: no-repeat;
     margin-top: 1%;
-    padding-top: 15%;
+    padding-top: 21%;
     padding-left: 1%;
-    border-radius: 0 0 0 0;
     background-color: #6070ff;
     background-size: 100%;
     background-position: 85% 20%;
     align-items: center;
-    padding-bottom: 40%;
+    padding-bottom: 7%;
   }
 
   .contact > p {
     color: #fff;
     margin-top: 2%;
-    margin-bottom: 2%;
+    margin-bottom: 5%;
     width: 60%;
   }
 
